l22_parser.output
Terminals unused in grammar

    tPRIVATE


State 19 conflicts: 1 shift/reduce
State 40 conflicts: 13 shift/reduce
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 4 shift/reduce
State 55 conflicts: 1 shift/reduce
State 75 conflicts: 4 shift/reduce
State 77 conflicts: 4 shift/reduce
State 153 conflicts: 4 shift/reduce


Grammar

    0 $accept: file $end

    1 file: %empty
    2     | declarations
    3     | program
    4     | declarations program

    5 program: tBEGIN block tEND

    6 declarations: declaration
    7             | declarations declaration
    8             | declaration ';'
    9             | declarations declaration ';'

   10 optional: %empty
   11         | '=' expr

   12 declaration: qualifier type tIDENTIFIER
   13            | tPUBLIC type tIDENTIFIER optional
   14            | type tIDENTIFIER optional
   15            | tPUBLIC var tIDENTIFIER '=' expr
   16            | var tIDENTIFIER '=' expr

   17 qualifier: tUSE
   18          | tFOREIGN

   19 var: tVAR
   20    | %empty

   21 types: %empty
   22      | type
   23      | types ',' type

   24 type: '[' type ']'
   25     | tINT_TYPE
   26     | tDOUBLE_TYPE
   27     | tTEXT_TYPE
   28     | tVOID_TYPE
   29     | funcType

   30 funcType: type '<' types '>'

   31 variable: type tIDENTIFIER

   32 variables: variable
   33          | variables ',' variable

   34 expressions: expr
   35            | expressions ',' expr

   36 expr: tINTEGER
   37     | tREAL
   38     | string
   39     | tNULL
   40     | '-' expr
   41     | '+' expr
   42     | tNOT expr
   43     | expr '+' expr
   44     | expr '-' expr
   45     | expr '*' expr
   46     | expr '/' expr
   47     | expr '%' expr
   48     | expr '<' expr
   49     | expr '>' expr
   50     | expr tGE expr
   51     | expr tLE expr
   52     | expr tNE expr
   53     | expr tEQ expr
   54     | expr tOR expr
   55     | expr tAND expr
   56     | tINPUT
   57     | tSIZE_OF '(' expr ')'
   58     | '(' expr ')'
   59     | lval '?'
   60     | lval
   61     | lval '=' expr
   62     | funcCall
   63     | function
   64     | '[' expr ']'

   65 function: '(' ')' tRETURN_TYPE type ':' block
   66         | '(' variables ')' tRETURN_TYPE type ':' block

   67 string: tSTRING
   68       | string tSTRING

   69 lval: tIDENTIFIER
   70     | expr '[' expr ']'

   71 block: '{' declarations instructions '}'
   72      | '{' instructions '}'

   73 funcCall: '@' '(' expressions ')'
   74         | '@' '(' ')'
   75         | expr '(' expressions ')'
   76         | expr '(' ')'

   77 instructions: instructions instruction
   78             | instruction
   79             | instructions ';' instruction

   80 instruction: expr
   81            | tWRITE expressions
   82            | tWRITELN expressions
   83            | tAGAIN
   84            | tSTOP
   85            | tRETURN
   86            | tRETURN expr
   87            | tIF '(' expr ')' tTHEN block
   88            | tIF '(' expr ')' tTHEN block elif
   89            | tWHILE '(' expr ')' tDO block
   90            | block

   91 elif: tELSE block
   92     | tELIF '(' expr ')' tTHEN block elif
   93     | tELIF '(' expr ')' tTHEN block


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 47
    '(' (40) 57 58 65 66 73 74 75 76 87 88 89 92 93
    ')' (41) 57 58 65 66 73 74 75 76 87 88 89 92 93
    '*' (42) 45
    '+' (43) 41 43
    ',' (44) 23 33 35
    '-' (45) 40 44
    '/' (47) 46
    ':' (58) 65 66
    ';' (59) 8 9 79
    '<' (60) 30 48
    '=' (61) 11 15 16 61
    '>' (62) 30 49
    '?' (63) 59
    '@' (64) 73 74
    '[' (91) 24 64 70
    ']' (93) 24 64 70
    '{' (123) 71 72
    '}' (125) 71 72
    error (256)
    tINTEGER <i> (258) 36
    tIDENTIFIER <s> (259) 12 13 14 15 16 31 69
    tSTRING <s> (260) 67 68
    tREAL <d> (261) 37
    tWHILE (262) 89
    tIF (263) 87 88
    tELIF (264) 92 93
    tTHEN (265) 87 88 92 93
    tELSE (266) 91
    tDO (267) 89
    tBEGIN (268) 5
    tEND (269) 5
    tAGAIN (270) 83
    tSTOP (271) 84
    tRETURN (272) 85 86
    tWRITE (273) 81
    tWRITELN (274) 82
    tINT_TYPE (275) 25
    tDOUBLE_TYPE (276) 26
    tTEXT_TYPE (277) 27
    tVOID_TYPE (278) 28
    tFOREIGN (279) 18
    tPUBLIC (280) 13 15
    tUSE (281) 17
    tVAR (282) 19
    tSIZE_OF (283) 57
    tRETURN_TYPE (284) 65 66
    tINPUT (285) 56
    tNULL (286) 39
    tPRIVATE (287)
    tOR (288) 54
    tAND (289) 55
    tNOT (290) 42
    tEQ (291) 53
    tNE (292) 52
    tGE (293) 50
    tLE (294) 51
    tUNARY (295)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    file <sequence> (61)
        on left: 1 2 3 4
        on right: 0
    program <node> (62)
        on left: 5
        on right: 3 4
    declarations <sequence> (63)
        on left: 6 7 8 9
        on right: 2 4 7 9 71
    optional <expression> (64)
        on left: 10 11
        on right: 13 14
    declaration <node> (65)
        on left: 12 13 14 15 16
        on right: 6 7 8 9
    qualifier <i> (66)
        on left: 17 18
        on right: 12
    var <i> (67)
        on left: 19 20
        on right: 15 16
    types <vetor> (68)
        on left: 21 22 23
        on right: 23 30
    type <type> (69)
        on left: 24 25 26 27 28 29
        on right: 12 13 14 22 23 24 30 31 65 66
    funcType <type> (70)
        on left: 30
        on right: 29
    variable <typenode> (71)
        on left: 31
        on right: 32 33
    variables <sequence> (72)
        on left: 32 33
        on right: 33 66
    expressions <sequence> (73)
        on left: 34 35
        on right: 35 73 75 81 82
    expr <expression> (74)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 11 15 16 34 35 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 57 58 61 64 70 75 76 80 86 87 88 89 92 93
    function <expression> (75)
        on left: 65 66
        on right: 63
    string <s> (76)
        on left: 67 68
        on right: 38 68
    lval <lvalue> (77)
        on left: 69 70
        on right: 59 60 61
    block <bloco> (78)
        on left: 71 72
        on right: 5 65 66 87 88 89 90 91 92 93
    funcCall <expression> (79)
        on left: 73 74 75 76
        on right: 62
    instructions <sequence> (80)
        on left: 77 78 79
        on right: 71 72 77 79
    instruction <node> (81)
        on left: 80 81 82 83 84 85 86 87 88 89 90
        on right: 77 78 79
    elif <node> (82)
        on left: 91 92 93
        on right: 88 92


State 0

    0 $accept: . file $end

    tBEGIN        shift, and go to state 1
    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    tFOREIGN      shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tUSE          shift, and go to state 8
    tVAR          shift, and go to state 9
    '['           shift, and go to state 10

    tIDENTIFIER  reduce using rule 20 (var)
    $default     reduce using rule 1 (file)

    file          go to state 11
    program       go to state 12
    declarations  go to state 13
    declaration   go to state 14
    qualifier     go to state 15
    var           go to state 16
    type          go to state 17
    funcType      go to state 18


State 1

    5 program: tBEGIN . block tEND

    '{'  shift, and go to state 19

    block  go to state 20


State 2

   25 type: tINT_TYPE .

    $default  reduce using rule 25 (type)


State 3

   26 type: tDOUBLE_TYPE .

    $default  reduce using rule 26 (type)


State 4

   27 type: tTEXT_TYPE .

    $default  reduce using rule 27 (type)


State 5

   28 type: tVOID_TYPE .

    $default  reduce using rule 28 (type)


State 6

   18 qualifier: tFOREIGN .

    $default  reduce using rule 18 (qualifier)


State 7

   13 declaration: tPUBLIC . type tIDENTIFIER optional
   15            | tPUBLIC . var tIDENTIFIER '=' expr

    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    tVAR          shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 20 (var)

    var       go to state 21
    type      go to state 22
    funcType  go to state 18


State 8

   17 qualifier: tUSE .

    $default  reduce using rule 17 (qualifier)


State 9

   19 var: tVAR .

    $default  reduce using rule 19 (var)


State 10

   24 type: '[' . type ']'

    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    '['           shift, and go to state 10

    type      go to state 23
    funcType  go to state 18


State 11

    0 $accept: file . $end

    $end  shift, and go to state 24


State 12

    3 file: program .

    $default  reduce using rule 3 (file)


State 13

    2 file: declarations .
    4     | declarations . program
    7 declarations: declarations . declaration
    9             | declarations . declaration ';'

    tBEGIN        shift, and go to state 1
    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    tFOREIGN      shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tUSE          shift, and go to state 8
    tVAR          shift, and go to state 9
    '['           shift, and go to state 10

    tIDENTIFIER  reduce using rule 20 (var)
    $default     reduce using rule 2 (file)

    program      go to state 25
    declaration  go to state 26
    qualifier    go to state 15
    var          go to state 16
    type         go to state 17
    funcType     go to state 18


State 14

    6 declarations: declaration .
    8             | declaration . ';'

    ';'  shift, and go to state 27

    $default  reduce using rule 6 (declarations)


State 15

   12 declaration: qualifier . type tIDENTIFIER

    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    '['           shift, and go to state 10

    type      go to state 28
    funcType  go to state 18


State 16

   16 declaration: var . tIDENTIFIER '=' expr

    tIDENTIFIER  shift, and go to state 29


State 17

   14 declaration: type . tIDENTIFIER optional
   30 funcType: type . '<' types '>'

    tIDENTIFIER  shift, and go to state 30
    '<'          shift, and go to state 31


State 18

   29 type: funcType .

    $default  reduce using rule 29 (type)


State 19

   71 block: '{' . declarations instructions '}'
   72      | '{' . instructions '}'

    tINTEGER      shift, and go to state 32
    tIDENTIFIER   shift, and go to state 33
    tSTRING       shift, and go to state 34
    tREAL         shift, and go to state 35
    tWHILE        shift, and go to state 36
    tIF           shift, and go to state 37
    tAGAIN        shift, and go to state 38
    tSTOP         shift, and go to state 39
    tRETURN       shift, and go to state 40
    tWRITE        shift, and go to state 41
    tWRITELN      shift, and go to state 42
    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    tFOREIGN      shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tUSE          shift, and go to state 8
    tVAR          shift, and go to state 9
    tSIZE_OF      shift, and go to state 43
    tINPUT        shift, and go to state 44
    tNULL         shift, and go to state 45
    tNOT          shift, and go to state 46
    '+'           shift, and go to state 47
    '-'           shift, and go to state 48
    '['           shift, and go to state 49
    '('           shift, and go to state 50
    '{'           shift, and go to state 19
    '@'           shift, and go to state 51

    tIDENTIFIER  [reduce using rule 20 (var)]

    declarations  go to state 52
    declaration   go to state 14
    qualifier     go to state 15
    var           go to state 16
    type          go to state 17
    funcType      go to state 18
    expr          go to state 53
    function      go to state 54
    string        go to state 55
    lval          go to state 56
    block         go to state 57
    funcCall      go to state 58
    instructions  go to state 59
    instruction   go to state 60


State 20

    5 program: tBEGIN block . tEND

    tEND  shift, and go to state 61


State 21

   15 declaration: tPUBLIC var . tIDENTIFIER '=' expr

    tIDENTIFIER  shift, and go to state 62


State 22

   13 declaration: tPUBLIC type . tIDENTIFIER optional
   30 funcType: type . '<' types '>'

    tIDENTIFIER  shift, and go to state 63
    '<'          shift, and go to state 31


State 23

   24 type: '[' type . ']'
   30 funcType: type . '<' types '>'

    '<'  shift, and go to state 31
    ']'  shift, and go to state 64


State 24

    0 $accept: file $end .

    $default  accept


State 25

    4 file: declarations program .

    $default  reduce using rule 4 (file)


State 26

    7 declarations: declarations declaration .
    9             | declarations declaration . ';'

    ';'  shift, and go to state 65

    $default  reduce using rule 7 (declarations)


State 27

    8 declarations: declaration ';' .

    $default  reduce using rule 8 (declarations)


State 28

   12 declaration: qualifier type . tIDENTIFIER
   30 funcType: type . '<' types '>'

    tIDENTIFIER  shift, and go to state 66
    '<'          shift, and go to state 31


State 29

   16 declaration: var tIDENTIFIER . '=' expr

    '='  shift, and go to state 67


State 30

   14 declaration: type tIDENTIFIER . optional

    '='  shift, and go to state 68

    $default  reduce using rule 10 (optional)

    optional  go to state 69


State 31

   30 funcType: type '<' . types '>'

    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    '['           shift, and go to state 10

    $default  reduce using rule 21 (types)

    types     go to state 70
    type      go to state 71
    funcType  go to state 18


State 32

   36 expr: tINTEGER .

    $default  reduce using rule 36 (expr)


State 33

   69 lval: tIDENTIFIER .

    $default  reduce using rule 69 (lval)


State 34

   67 string: tSTRING .

    $default  reduce using rule 67 (string)


State 35

   37 expr: tREAL .

    $default  reduce using rule 37 (expr)


State 36

   89 instruction: tWHILE . '(' expr ')' tDO block

    '('  shift, and go to state 72


State 37

   87 instruction: tIF . '(' expr ')' tTHEN block
   88            | tIF . '(' expr ')' tTHEN block elif

    '('  shift, and go to state 73


State 38

   83 instruction: tAGAIN .

    $default  reduce using rule 83 (instruction)


State 39

   84 instruction: tSTOP .

    $default  reduce using rule 84 (instruction)


State 40

   85 instruction: tRETURN .
   86            | tRETURN . expr

    tINTEGER     shift, and go to state 32
    tIDENTIFIER  shift, and go to state 33
    tSTRING      shift, and go to state 34
    tREAL        shift, and go to state 35
    tSIZE_OF     shift, and go to state 43
    tINPUT       shift, and go to state 44
    tNULL        shift, and go to state 45
    tNOT         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '['          shift, and go to state 74
    '('          shift, and go to state 50
    '@'          shift, and go to state 51

    tINTEGER     [reduce using rule 85 (instruction)]
    tIDENTIFIER  [reduce using rule 85 (instruction)]
    tSTRING      [reduce using rule 85 (instruction)]
    tREAL        [reduce using rule 85 (instruction)]
    tSIZE_OF     [reduce using rule 85 (instruction)]
    tINPUT       [reduce using rule 85 (instruction)]
    tNULL        [reduce using rule 85 (instruction)]
    tNOT         [reduce using rule 85 (instruction)]
    '+'          [reduce using rule 85 (instruction)]
    '-'          [reduce using rule 85 (instruction)]
    '['          [reduce using rule 85 (instruction)]
    '('          [reduce using rule 85 (instruction)]
    '@'          [reduce using rule 85 (instruction)]
    $default     reduce using rule 85 (instruction)

    expr      go to state 75
    function  go to state 54
    string    go to state 55
    lval      go to state 56
    funcCall  go to state 58


State 41

   81 instruction: tWRITE . expressions

    tINTEGER     shift, and go to state 32
    tIDENTIFIER  shift, and go to state 33
    tSTRING      shift, and go to state 34
    tREAL        shift, and go to state 35
    tSIZE_OF     shift, and go to state 43
    tINPUT       shift, and go to state 44
    tNULL        shift, and go to state 45
    tNOT         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '['          shift, and go to state 74
    '('          shift, and go to state 50
    '@'          shift, and go to state 51

    expressions  go to state 76
    expr         go to state 77
    function     go to state 54
    string       go to state 55
    lval         go to state 56
    funcCall     go to state 58


State 42

   82 instruction: tWRITELN . expressions

    tINTEGER     shift, and go to state 32
    tIDENTIFIER  shift, and go to state 33
    tSTRING      shift, and go to state 34
    tREAL        shift, and go to state 35
    tSIZE_OF     shift, and go to state 43
    tINPUT       shift, and go to state 44
    tNULL        shift, and go to state 45
    tNOT         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '['          shift, and go to state 74
    '('          shift, and go to state 50
    '@'          shift, and go to state 51

    expressions  go to state 78
    expr         go to state 77
    function     go to state 54
    string       go to state 55
    lval         go to state 56
    funcCall     go to state 58


State 43

   57 expr: tSIZE_OF . '(' expr ')'

    '('  shift, and go to state 79


State 44

   56 expr: tINPUT .

    $default  reduce using rule 56 (expr)


State 45

   39 expr: tNULL .

    $default  reduce using rule 39 (expr)


State 46

   42 expr: tNOT . expr

    tINTEGER     shift, and go to state 32
    tIDENTIFIER  shift, and go to state 33
    tSTRING      shift, and go to state 34
    tREAL        shift, and go to state 35
    tSIZE_OF     shift, and go to state 43
    tINPUT       shift, and go to state 44
    tNULL        shift, and go to state 45
    tNOT         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '['          shift, and go to state 74
    '('          shift, and go to state 50
    '@'          shift, and go to state 51

    expr      go to state 80
    function  go to state 54
    string    go to state 55
    lval      go to state 56
    funcCall  go to state 58


State 47

   41 expr: '+' . expr

    tINTEGER     shift, and go to state 32
    tIDENTIFIER  shift, and go to state 33
    tSTRING      shift, and go to state 34
    tREAL        shift, and go to state 35
    tSIZE_OF     shift, and go to state 43
    tINPUT       shift, and go to state 44
    tNULL        shift, and go to state 45
    tNOT         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '['          shift, and go to state 74
    '('          shift, and go to state 50
    '@'          shift, and go to state 51

    expr      go to state 81
    function  go to state 54
    string    go to state 55
    lval      go to state 56
    funcCall  go to state 58


State 48

   40 expr: '-' . expr

    tINTEGER     shift, and go to state 32
    tIDENTIFIER  shift, and go to state 33
    tSTRING      shift, and go to state 34
    tREAL        shift, and go to state 35
    tSIZE_OF     shift, and go to state 43
    tINPUT       shift, and go to state 44
    tNULL        shift, and go to state 45
    tNOT         shift, and go to state 46
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '['          shift, and go to state 74
    '('          shift, and go to state 50
    '@'          shift, and go to state 51

    expr      go to state 82
    function  go to state 54
    string    go to state 55
    lval      go to state 56
    funcCall  go to state 58


State 49

   24 type: '[' . type ']'
   64 expr: '[' . expr ']'

    tINTEGER      shift, and go to state 32
    tIDENTIFIER   shift, and go to state 33
    tSTRING       shift, and go to state 34
    tREAL         shift, and go to state 35
    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    tSIZE_OF      shift, and go to state 43
    tINPUT        shift, and go to state 44
    tNULL         shift, and go to state 45
    tNOT          shift, and go to state 46
    '+'           shift, and go to state 47
    '-'           shift, and go to state 48
    '['           shift, and go to state 49
    '('           shift, and go to state 50
    '@'           shift, and go to state 51

    type      go to state 23
    funcType  go to state 18
    expr      go to state 83
    function  go to state 54
    string    go to state 55
    lval      go to state 56
    funcCall  go to state 58


State 50

   58 expr: '(' . expr ')'
   65 function: '(' . ')' tRETURN_TYPE type ':' block
   66         | '(' . variables ')' tRETURN_TYPE type ':' block

    tINTEGER      shift, and go to state 32
    tIDENTIFIER   shift, and go to state 33
    tSTRING       shift, and go to state 34
    tREAL         shift, and go to state 35
    tINT_TYPE     shift, and go to state 2
    tDOUBLE_TYPE  shift, and go to state 3
    tTEXT_TYPE    shift, and go to state 4
    tVOID_TYPE    shift, and go to state 5
    tSIZE_OF      shift, and go to state 43
    tINPUT        shift, and go to state 44
    tNULL         shift, and go to state 45
    tNOT          shift, and go to state 46
    '+'           shift, and go to state 47
    '-'           shift, and go to state 48
    '['           shift, and go to state 49
    '('           shift, and go to state 50
    ')'           shift, and go to state 84
    '@'           shift, and go to state 51

    type       go to state 85
    funcType   go to state 18
    variable   go to state 86
    variables  go to state 87
    expr       go to state 88
    function   go to state 54
    string     go to state 55
    lval       go to state 56
    funcCall   go to state 58


State 51

   73 funcCall: '@' . '(' expressions ')'
   74         | '@' . '(' ')'

    '('  shift, and go to state 89


State 52

    7 declarations: declarations . declaration
    9             | declarations . declaration ';'
   71 block: '{' declarations . instructions '}'
